--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,7 +32,7 @@
   
  
 
-  #location {
+  .location {
       padding: 20px;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
@@ -47,7 +47,7 @@
     border:0px solid;
   }
 
-  #first_date {
+  .first_date {
     padding: 20px;
     height: 45px;
     width: 200px;
@@ -63,7 +63,7 @@
     color: #000000;
   }
 
-  #last_date {
+  .last_date {
     padding: 0px;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
@@ -152,23 +152,6 @@ a:hover {
 
 
 
-.fa, .fas {
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    background: #34becd;
-    border-radius: 100em;
-   
-    height: 32px;
-    margin: 10px 0 0 -16px;
-    padding: 8px 0 0;
-    position: relative;
-    text-align: center;
-    width: 32px;
-    
-    
-   
-}
-
 
 .rounded-circle {
 position: fixed;
@@ -209,7 +192,7 @@ color: #000000;
 */
 
 
-.calendar-card {
+#calendar{
     border: 1px solid rgba(0,0,0,.125);
     width: 400px;
     border-radius: 10px;
@@ -299,3 +282,101 @@ position: fixed;
         left: 0;
       }
     }
+
+    #new_booking {
+        display: flex;
+    }
+
+
+    .btn_container {
+        position: sticky;
+        width: 600px;
+        height: 65px;
+        left: 400px;
+        top: 80px;
+        
+        background: #FFFFFF;
+        border-radius: 50px;
+       border: 1px solid grey;
+       padding: 0px;
+
+    }
+
+    .submit {
+        width: 30px;
+        height: 20px;
+        background: #FFFFFF;
+        margin-top: 0px;
+        margin-left: 0px;
+        position: sticky;
+    }
+
+   .location_btn {
+    height: 60px;
+    width: 190px;
+    position: sticky;
+    padding-left: 30px;
+    margin: 0px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border: 0px solid;
+    font-family: Abyssinica SIL;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 21px;
+    
+   }
+
+   .first_date_btn{
+    height: 55px;
+    position: sticky;
+    padding-left: 20px;
+    padding-right: 10px;
+    margin: 0px;
+    border-top:0px solid;
+    border-bottom:0px solid;
+    border-left:1px solid grey;
+    border-right:1px solid grey;
+    width: 180px;
+    font-family: Abyssinica SIL;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    color: #757575;
+   }
+
+   .last_date_btn {
+    height: 55px;
+    position: sticky;
+    padding-left: 20px;
+    padding-right: 10px;
+
+    margin: 0px;
+    border: 0px solid;
+    width: 180px;
+    font-family: Abyssinica SIL;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    color: #757575;
+
+   }
+
+
+
+.fa, .fas {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    background: #34becd;
+    border-radius: 100em;
+   
+    height: 30px;
+    margin: 10px 0 0 -16px;
+    padding: 8px 0 0;
+    position: sticky;
+    text-align: center;
+    width: 30px;
+    
+    
+   
+}
