--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,24 +4,35 @@
   <%= image_tag("logo.png", class: "rounded-circle") %>
  
   CARCNC</a>
+  
+  <div class="btn_container"
+  <%= form_tag '/activities', method: :get, class: 'my_class' do %>
+    <%= text_field_tag 'location_input_id', nil, placeholder: 'Location', class: 'location_btn ' %> 
+    <%= date_field "start_date_input_id", "date_input_name", class: 'first_date_btn' %>
+    <%= date_field "end_date_input_id", "date_input_name", class: 'last_date_btn' %>
+    <%= submit_tag 'submit', class: 'submit' %>
+    
+   
+  <% end %>
+  
 
-
-  <div class="buttons">
-  <form novalidate="novalidate" class="form-inline" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-  <div class="search-form-control form-group">
-  <input id="location" type="search" placeholder="Location" aria-label="Search">
-  <input type="dates" aria-label="Dates" placeholder="First date" id="first_date">
-    <div id="last_date" >
-  <input type="dates" aria-label="Dates" placeholder="Last date" >
-
-    <button name="button" type="submit" class="btn btn-flat">
-      <i class="fas fa-search">
-      </i> 
+  <button name="button" type="submit" class="btn btn-flat">
+    
+    <i class="fas fa-search">
+    </i> 
     </button>
-    </div>
-  </div>
-</form>
-</div>
+    
+<!--<button name="jump" onclick="jump()">Go</button>-->
+
+
+
+<!-- Optional JavaScript for bootstrap -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+
 
 
 
