Change search bar

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Cars available in car.location </h1>
+<h1>Cars available in <%= @location %> from <%= @start_date %> to <%= @end_date %></h1>
 <p></p>
 
 <div class="cards">
