--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,31 +9,22 @@
       <%= text_field_tag 'location', nil, placeholder: 'Location', class: 'location_btn ' %> 
       <%= date_field "start_date", "date_input_name", class: 'first_date_btn' %>
       <%= date_field "end_date", "date_input_name", class: 'last_date_btn' %>
-      <%= submit_tag 'submit', class: 'submit' %>
+      <div class="icon_wrapper">
+      <%= submit_tag '', class: 'submit_icon' %>
+      <button name="button" type="submit" class="circle">
+   f <i class="fas fa-search">
+    </i> 
+  </button>
+  </div>
     <% end %>
+     
+      
+    
     </div>
   
 
-  <button name="button" type="submit" class="btn btn-flat">
-    <i class="fas fa-search">
-    </i> 
-  </button>
-    
-<!--<button name="jump" onclick="jump()">Go</button>-->
-
-
-
-<!-- Optional JavaScript for bootstrap -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
-
-
-
-
-
+  
+ 
 <select name="cars" class="dropdown-field">
   
   <option value="volvo" ></option>
