--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,18 @@
 
   <div class="bg-img">
-    <a class="home-button" href="#">
+    <%= link_to root_path, class: "home-button" do %>
+
       <%= image_tag("logo.png", class: "rounded-circle") %> CARCNC
-    </a>
+      <% end %>
 
     <div class="btn_container">
-      <%= form_tag '/cars', method: :get, class: 'my_class' do %>
-        <%= text_field_tag 'location', nil, placeholder: 'Location', class: 'location_btn ' %> 
-        <%= date_field "start_date", "date_input_name", class: 'first_date_btn' %>
-        <%= date_field "end_date", "date_input_name", class: 'last_date_btn' %>
-        <div class="icon_wrapper">
-          <%= submit_tag '', class: 'submit_icon' %>
-          <button name="button" type="submit" class="circle">
-            <i class="fas fa-search"></i> 
-          </button>
-        </div>
-      <% end %>
+    <%= form_tag '/cars', method: :get, class: 'my_class' do %>
+      <%= text_field_tag 'location', nil, placeholder: 'Location', class: 'location_btn ' %> 
+      <%= date_field_tag "start_date", "date_input_name", class: 'first_date_btn' %>
+      <%= date_field_tag "end_date", "date_input_name", class: 'last_date_btn' %>
+    
+        <%= submit_tag 'Go!', class: 'submit' %>
+    <% end %>
     </div>
   
 
@@ -38,9 +35,9 @@
 <%= image_tag("avatar.png", class: "avatar") %>
 
 
-    <h1>Welcome on CarCNC</h1>
-    <p>Ready for a ride ?</p>
-     
+    <h1 id="welcome">Welcome on CarCNC</h1>
+    <p id="ready">Ready for a ride ?</p>
+    
 <!-- Optional JavaScript for bootstrap -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
