--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -19,7 +19,8 @@
       <% @cars.each do |car|  %>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card" style="width: 18rem;">
-            <%= cl_image_tag car.photo.key, height: 180, width: 286, crop: :fill %>
+          
+          <%= image_tag car.photo.variant(resize_to_limit: [300, 400]) if car.photo.attached? %>
             <div class="card-body">
               <h4 class="card-title"><strong><%= car.model %></strong></h4>
                 <p><%= car.capacity %> persons</p>
