--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -3,7 +3,7 @@
     <div class="container p-3">
       <div class="row">
         <div class="col-md-5">
-              <%= cl_image_tag @car.photo.key, height: 300, width: 400, crop: :fill %>
+              <%= image_tag @car.photo.variant(resize_to_limit: [300, 400]) if @car.photo.attached? %>
         </div>
           <div class="col-md-7">
               <h3>Fun to drive, comfortable ride and fuel efficient, great for short and long trips.</h3>
